--- a/app/src/main/res/layout/item_serie.xml
+++ b/app/src/main/res/layout/item_serie.xml
@@ -1,31 +1,34 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="?android:attr/listPreferredItemHeight"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:background="@color/bg_yellow_faint"
     android:orientation="horizontal"
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/list_item_padding"
     android:paddingRight="@dimen/activity_horizontal_margin"
-    android:paddingBottom="@dimen/list_item_padding">
+    android:paddingBottom="@dimen/list_item_padding"
+    android:foreground="@drawable/ripple">
 
     <TextView
         android:id="@+id/dateTv"
         android:layout_width="wrap_content"
         android:layout_height="match_parent"
-        android:foreground="@drawable/ripple"
         android:paddingStart="@dimen/space_none"
         android:paddingEnd="@dimen/space_normal"
+        android:gravity="center_vertical"
         android:textColor="@color/black_text"
-        android:textSize="@dimen/material_text_subhead" />
+        android:textSize="@dimen/material_text_subhead"
+        app:layout_constraintStart_toStartOf="parent"/>
 
     <TextView
         android:id="@+id/priceTv"
         android:layout_width="wrap_content"
         android:layout_height="match_parent"
-        android:layout_alignParentEnd="true"
-        android:foreground="@drawable/ripple"
+        android:gravity="center_vertical"
+        app:layout_constraintEnd_toEndOf="parent"
         android:textColor="@color/black_text"
         android:textSize="@dimen/material_text_subhead" />
 
-</RelativeLayout>
+</androidx.constraintlayout.widget.ConstraintLayout>
