--- a/app/src/main/res/menu/menu_detail.xml
+++ b/app/src/main/res/menu/menu_detail.xml
@@ -9,4 +9,11 @@
         android:icon="@drawable/ic_share"
         app:showAsAction="always" />
 
+    <item
+        android:id="@+id/action_update"
+        android:orderInCategory="20"
+        android:title="@string/update"
+        android:icon="@drawable/ic_refresh"
+        app:showAsAction="ifRoom" />
+
 </menu>
