--- a/app/src/main/res/menu/menu_home_list.xml
+++ b/app/src/main/res/menu/menu_home_list.xml
@@ -9,8 +9,7 @@
         android:orderInCategory="10"
         android:title="@string/filter"
         app:actionViewClass="android.widget.SearchView"
-        app:showAsAction="ifRoom|collapseActionView" />
-
+        app:showAsAction="always|collapseActionView" />
 
     <item
         android:id="@+id/action_switch_order"
@@ -18,4 +17,11 @@
         android:orderInCategory="20"
         android:title="@string/order"
         app:showAsAction="always" />
+
+    <item
+        android:id="@+id/action_update"
+        android:orderInCategory="30"
+        android:title="@string/update"
+        android:icon="@drawable/ic_refresh"
+        app:showAsAction="ifRoom" />
 </menu>
