--- a/app/src/main/res/menu/menu_home_list.xml
+++ b/app/src/main/res/menu/menu_home_list.xml
@@ -9,7 +9,7 @@
         android:orderInCategory="10"
         android:title="@string/filter"
         app:actionViewClass="android.widget.SearchView"
-        app:showAsAction="always|collapseActionView" />
+        app:showAsAction="always" />
 
     <item
         android:id="@+id/action_switch_order"
